--- a/src/global.css
+++ b/src/global.css
@@ -9,7 +9,7 @@
 @font-face {
     font-family: 'GmarketSans';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansLight.woff') format('woff');
-    font-weight: lighter;
+    font-weight: 300;
     font-style: normal;
     font-display: swap;
 }
